--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="google-site-verification" content="CeidGcA-znztQmot6_uekjNiiRa4EWENq04MOOzrB4Q" />
 		<title>Home - Netflix</title>
 
 		<link href="./assets/images/favicon.ico" rel="icon" type="image/x-icon" />
