--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</div>
 							<div class="title">Pensiamo ti appassioneranno</div>
 						</div>
-						<div class="slider">
+						<div id="run-all-1" class="slider">
 							<div class="content">
 								<img
 									src="http://occ-0-6247-2164.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABfNEZtBlGdb8YiWWNwSqDZV0y-zAGM7P8QWCuPQsKafunyS9dA5Bpwm88-z62Eq9KQ90knw-rIng4SQs_u0bpLUL1Tja40oyS7GmuGitXMN32svxlBAsVSkTSi7wXgz7OkUJIl0A0yiLtGA57l97yirCpNTSh4op2_t68sA0DEtUHtk0sk3M7rK4RUV0HSZ6-XCzmw0p3OeA6JaD5bmaBW7srjDKmjJUsZsz4DnaPxuIX8RhBQATeTCcvbBGwzHoQu_JbtO4pCN_I4EcM9L70Ag.webp?r=eb2"
