--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@ Overall, this file sets up the structure and styling for a Netflix-like user int
 			</div>
 			<div class="right">
 				<ul class="nav-icons">
+					<div id="backhome2" class="nav-item small nav-item icon" style="display:none;">
+						<i data-feather="skip-back"></i>
+					</div>
 					<div class="nav-item icon">
 						<i data-feather="search"></i>
 					</div>
